kubernetes/traefik/docwhat-auth.yaml
###############################################
# BasicAuth Middleware
###############################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: docwhat-auth
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  basicAuth:
    secret: authusers # The name of a kubernetes generic secret.

###############################################
# User/Password for http auth
###############################################
