kubernetes/traefik/https-redirect.yaml
---
###############################################
# Redirect from HTTP to HTTPS Middleware
###############################################
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: false
