kubernetes/traefik/traefik-servicemonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-metrics
    release: prometheus-operator
spec:
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  ports:
    - name: metrics
      port: 8082
      targetPort: 8082
  type: ClusterIP
