kubernetes/traefik/60-traefik-dashbaord.yaml
###############################################
# Traefik HTTPS Redirect
###############################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-dashboard-redirect
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.docwhat.net`)
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: https-redirect
          namespace: traefik

###############################################
# Traefik dashboard
###############################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.docwhat.net`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: auth
          namespace: traefik
  tls: {}

###############################################
# Linode
###############################################
