kubernetes/traefik/routes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-routes
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.docwhat.net`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: sts-headers
          namespace: traefik
        - name: docwhat-auth
          namespace: traefik
  tls: {}
